# Yager

./: 1_gen_project.bat  3_gen_project.sh  CMakeLists.txt
cmake/: setup.cmake
cmake/aaaaaaa/: gremlin.cmake
cmake/aaaaaaa/internal/: enviroment.cmake  helpers.cmake  log.cmake  modules.cmake  unit.cmake
cmake/aaaaaaa/modules/: guards.cmake  guards.onInit.cmake  guards.onSetup.cmake  test.cmake  test.onInit.cmake  test.onSetup.cmake  vcpkg.cmake  vcpkg.onInit.cmake
engine/: CMakeLists.txt
engine/common/: CMakeLists.txt
engine/common/Private/common/: hit_timer.cpp
engine/common/Public/: common.hpp  macro.hpp
engine/common/Public/common/: hit_timer.hpp
engine/common/Test/: hit_timer_test.cpp
engine/core/: CMakeLists.txt
engine/core/Private/core/: object.cpp  simulation.cpp  (+7 more)
engine/core/Test/: simulation_test.cpp
engine/framework/: CMakeLists.txt
engine/libs/boost/: CMakeLists.txt
engine/libs/libcds/: CMakeLists.txt  loader.cmake
engine/libs/math/: CMakeLists.txt
engine/libs/reflect/: CMakeLists.txt
engine/libs/threading/: CMakeLists.txt
engine/libs/threading/Private/: thread.cpp
engine/libs/threading/Private/threading/: thread.cpp  thread_impl.cpp  thread_impl.hpp  thread_pull.cpp  thread_task.cpp
engine/libs/threading/Public/: thread.hpp  thread_pull.hpp
engine/libs/threading/Public/config/: thread_config.hpp
engine/libs/threading/Public/threading/: thread.hpp  thread_pull.hpp  thread_task.hpp
engine/libs/threading/Test/: thread_pull_test.cpp  thread_task_test.cpp
snake/: CMakeLists.txt
snake/main/: CMakeLists.txt  main.cpp
(+51 files in other folders)
